# gtk-frame-clock-example

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
